[gd_scene load_steps=12 format=2]

[ext_resource path="res://Font/fuente_menu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/FondoMenu/windowsazul.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Logo/LogoPinkGuy.png" type="Texture" id=4]
[ext_resource path="res://scripts/BotonesMenuJoan.gd" type="Script" id=5]
[ext_resource path="res://Assets/Audio/joanAuditivo.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Buttons/music.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/no_music.png" type="Texture" id=8]
[ext_resource path="res://escenas/Opciones_menu.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 130
outline_size = 4
outline_color = Color( 0.34902, 0.623529, 0.290196, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 130
outline_size = 4
outline_color = Color( 0.34902, 0.623529, 0.290196, 1 )
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="pantallazozazul" type="Sprite" parent="."]
position = Vector2( 107.37, -505.137 )
rotation = 0.20944
scale = Vector2( 4.8934, 6.02414 )
texture = ExtResource( 3 )
centered = false

[node name="VBoxMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -755.5
margin_top = -272.5
margin_right = 755.5
margin_bottom = 272.5
rect_rotation = -5.8
custom_constants/separation = 50

[node name="Logo" type="TextureRect" parent="VBoxMenu"]
margin_left = 1500.0
margin_top = 450.0
margin_right = 3011.0
margin_bottom = 590.0
rect_rotation = -178.9
texture = ExtResource( 4 )

[node name="VBoxBotones" type="VBoxContainer" parent="VBoxMenu"]
margin_top = 190.0
margin_right = 1511.0
margin_bottom = 545.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_right = 1511.0
margin_bottom = 105.0
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Me Explicoteo"
flat = true

[node name="Opc" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_top = 125.0
margin_right = 1511.0
margin_bottom = 230.0
rect_rotation = 23.3
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 1 )
text = "A6u5t1n m3 roba hora5"
flat = true

[node name="Salir" type="Button" parent="VBoxMenu/VBoxBotones"]
margin_top = 250.0
margin_right = 1511.0
margin_bottom = 355.0
rect_rotation = -37.3
custom_colors/font_color_hover = Color( 0.184314, 0.407843, 0.239216, 1 )
custom_colors/font_color_pressed = Color( 0.196078, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 2 )
text = "Despedido    XD"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 1800.0
margin_top = 27.0
margin_right = 2312.0
margin_bottom = 539.0
rect_rotation = -33.9
rect_scale = Vector2( 0.16971, 0.16079 )

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 512.0
margin_bottom = 512.0
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Opciones" parent="." instance=ExtResource( 9 )]

[node name="miusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 8.0

[connection signal="pressed" from="VBoxMenu/VBoxBotones/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/Opc" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="VBoxMenu/VBoxBotones/Salir" to="." method="_on_Salir_pressed"]
[connection signal="button_down" from="HBoxContainer/TextureButton" to="." method="_on_TextureButton_button_down"]
